# modern-fortran

./: .gitignore  .gitmodules  readme.md
src/: Dockerfile
src/Introduction-to-Fortran/02_02/: Lesson_2.2_variable_demo.f90
src/Introduction-to-Fortran/02_04/: Lesson_2.4_named_constant.f90
src/Introduction-to-Fortran/02_06/: Lesson_2.6_expression_demonstration.f90
src/Introduction-to-Fortran/02_07/: Lesson_2.7_if_constructs.f90  Lesson_2.7_select_case.f90
src/Introduction-to-Fortran/02_08/: Lesson_2.8_indexed_loops.f90  Lesson_2.8_while_loop.f90
src/Introduction-to-Fortran/02_09/: Lesson_2.9_squares.f90
src/Introduction-to-Fortran/03_02/: Lesson_3.2_hello_user_pt1.f90  Lesson_3.2_hello_user_pt2.f90
src/Introduction-to-Fortran/03_03/: Lesson_3.3_read_from_file.f90  Lesson_3.3_write_to_file.f90
src/Introduction-to-Fortran/03_05/: Lesson_3.5_solution.f90
src/Introduction-to-Fortran/04_03/: Lesson_4.3_functions_and_subroutines.f90
src/Introduction-to-Fortran/04_06/: Lesson_4.6_solution.f90
src/dssf/: readme.md
src/dssf/02-getting-started/: makefile  uniform1.f90
src/modern_fortran/c01_introducing/: readme.md
src/modern_fortran/c02_minimal_working_app/: readme.md
src/modern_fortran/c03_reusing/: readme.md
src/modern_fortran/c04_organizing/: readme.md
src/modern_fortran/c05_analyzing_arrays/: readme.md
src/modern_fortran/c06_formatting_data/: readme.md
src/modern_fortran/c07_parallelizing/: readme.md
src/modern_fortran/c08_abstracting/: readme.md
src/modern_fortran/c09_generalizing/: readme.md
src/modern_fortran/c10_defining_operators/: readme.md
src/modern_fortran/c11_Interoperating/: readme.md
src/modern_fortran/c12_parallelism_teams/: readme.md
src/neural-fortran/: CMakeLists.txt  Dockerfile  Dockerfile-base  Dockerfile-builder  functional.cmake  h5fortran.cmake  hdf5.cmake  json.cmake  makefile
src/tsunami/: README.md
src/tsunami/src/ch02/: Makefile
src/tsunami/src/ch03/: Makefile  tsunami.f90
src/tsunami/src/ch04/: Makefile  mod_initial.f90
src/tsunami/src/ch07/: Makefile
src/tsunami/src/ch08/: Makefile  mod_field.f90  plot_2d_water_elevation.py
src/tsunami/src/ch10/: Makefile  mod_field.f90
src/tsunami/src/ch12/: mod_field.f90
src/tsunami/src/extras/: mod_boundary.f90
src/tsunami/src/final/: mod_field.f90
